# pilauncher

./: .gitignore  LICENSE  index.html  package.json  pnpm-lock.yaml
docs/: accessibility_improvement_guide.md  demo.html  download_speed_analysis.md  download_ui_ux_analysis.md  instance_closed_loop_analysis.md  instance_lifecycle_and_lighty_migration_analysis.md  instance_transition_animation_suggestions.md  java-friends-design.md  lan-p2p-download-acceleration-design.md  lan_logic_analysis.md  lighty_loader_refactoring_design.md  loader_agent_coding_guidelines.md  loader_download_deployment_analysis.md  mod_list_ui_ux_analysis.md  resource_card_dark_mode_design.md  (+2 more)
src/: App.tsx  index.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src-tauri/src/commands/: lan_cmd.rs  library_cmd.rs  library_resource_cmd.rs  mod.rs  translation_cmd.rs  update_cmd.rs  version_cmd.rs
src-tauri/src/commands/instance/: action_cmd.rs  keymap_cmd.rs  mod.rs  resource_cmd.rs  save_cmd.rs
src-tauri/src/domain/: lan.rs  library.rs  mod_manifest.rs  modpack.rs
src-tauri/src/services/: config_service.rs  db_service.rs  deferred_startup.rs  resource_service.rs  social_service.rs
src-tauri/src/services/auth/: wardrobe.rs  xbox.rs
src-tauri/src/services/downloader/: core_installer.rs  loader_installer.rs
src-tauri/src/services/downloader/dependencies/: mirror.rs
src-tauri/src/services/downloader/loader_installer/: fabric.rs  forge.rs  neoforge.rs  quilt.rs
src-tauri/src/services/instance/: action.rs  creation.rs  environment.rs  mod_manager.rs  mod_manifest_service.rs  resource_manager.rs  save_manager.rs  verify_service.rs
src-tauri/src/services/lan/: http_api.rs  mdns_service.rs  transfer_service.rs  trust_store.rs
src-tauri/src/services/launcher/: mod.rs  pre_launch_check.rs
src-tauri/src/services/launcher/builder/: args.rs  version_chain.rs
src-tauri/src/services/modpack_service/: logic.rs  orchestrator.rs
src-tauri/src/services/webdav_sync_service/: constants.rs  library.rs  mod.rs  save_backups.rs  skins.rs
(+166 files in other folders)
